# ai-discord-chatbot-tutorial

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  add_command.py  function.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
src/functions/api/post/: function.py
src/functions/worker/ask/: function.py
src/functions/worker/hello/: function.py
src/tools/: add_command.py
