[project]
name = "ai-discord-chatbot-tutorial"
version = "0.1.0"
description = "Serverless AI Discord chatbot tutorial using Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.54",
    "botocore==1.35.54",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "s3transfer==0.10.3",
    "six==1.16.0",
    "urllib3==2.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
